--- a/package.json
+++ b/package.json
@@ -40,7 +40,29 @@
     "slick-carousel": "^1.8.1",
     "uuid": "^3.1.0",
     "validator": "^9.4.0",
-    "video-react": "^0.10.4"
+    "video-react": "^0.10.4",
+    "bcrypt": "^1.0.3",
+    "body-parser": "~1.18.2",
+    "cloudinary": "^1.11.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
+    "express": "~4.15.5",
+    "express-validator": "^4.3.0",
+    "formidable": "^1.1.1",
+    "generate-password": "^1.4.0",
+    "hbs": "^4.0.1",
+    "helmet": "^3.9.0",
+    "mongoose": "^4.13.6",
+    "morgan": "~1.9.0",
+    "nodemailer": "^4.6.4",
+    "querystring": "^0.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "rimraf": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
