--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
